--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+@viewport{
+
+    zoom: 1.0;
+    width: extend-to-zoom;
+
+}
+
+@-ms-viewport{
+
+    width: extend-to-zoom;
+    zoom: 1.0;
+}
+
+
+
+
+
+
+
+
 div{
 
     height: 151px;
