--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,3 @@
-@viewport{
-
-    zoom: 1.0;
-    width: extend-to-zoom;
-
-}
-
-@-ms-viewport{
-
-    width: extend-to-zoom;
-    zoom: 1.0;
-}
-
-
-
-
-
-
-
-
 div{
 
     height: 151px;
@@ -40,11 +20,11 @@ div{
 
 #calc{
         
-        height: 60px;
-        width: 30%;
+        height: 44%;
+        width: 28%;
         text-align: center;
         background-color: rgb(157, 156, 160);
-        border-radius: 5px;
+        border-radius: 2%;
         align-items: center;
         margin-top: 3%;
         margin-left: 34%;
@@ -62,8 +42,8 @@ div{
 #one{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 441px;
+    margin-top: 1%;
+    margin-left: 34%;
     height: 55%;
     width: 9%;
 
@@ -72,8 +52,8 @@ div{
 #two{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 8px;
+    margin-top: 1%;
+    /* margin-left: 8%; */
     margin-right: -1px;
     height: 55%;
     width: 9%;
@@ -83,8 +63,8 @@ div{
 #three{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 9px;
+    margin-top: 1%;
+    /* margin-left: 9px; */
     height: 55%;
     width: 9%;
 
@@ -94,8 +74,8 @@ div{
     background-color: #383d3a;
     height: 53%;
     width: 6%;
-    margin-left: 1%;
-    margin-top: 5px;
+    /* margin-left: 2%; */
+    margin-top: 1%;
 
 }
 
@@ -104,8 +84,8 @@ div{
 #four{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 441px;
+    margin-top: 1%;
+    margin-left: 34%;
     height: 55%;
     width: 9%;
 
@@ -114,8 +94,8 @@ div{
 #five{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 9px;
+    margin-top: 1%;
+    /* margin-left: 9px; */
     height: 55%;
     width: 9%;
 
@@ -124,8 +104,8 @@ div{
 #six{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 9px;
+    margin-top: 1%;
+    /* margin-left: 9px; */
     height: 55%;
     width: 9%;
 
@@ -140,8 +120,8 @@ div{
     background-color: #383d3a;
     height: 53%;
     width: 6%;
-    margin-left: 1%;
-    margin-top: 5px;
+    /* margin-left: 1%; */
+    margin-top: 1%;
 
 }
 
@@ -150,9 +130,9 @@ div{
 #seven{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 441px;
-    margin-right: -1px;
+    margin-top: 1%;
+    margin-left: 34%;
+    /* margin-right: -1px; */
     height: 55%;
     width: 9%;
 
@@ -161,9 +141,9 @@ div{
 #eight{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 9px;
-    margin-right: -1px;
+    margin-top: 1%;
+    /* margin-left: 9px;
+    margin-right: -1px; */
     height: 55%;
     width: 9%;
 
@@ -172,9 +152,9 @@ div{
 #nine{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 9px;
-    margin-right: -1px;
+    margin-top: 1%;
+    /* margin-left: 9px;
+    margin-right: -1px; */
     height: 55%;
     width: 9%;
 
@@ -186,8 +166,8 @@ div{
     background-color: #383d3a;
     height: 53%;
     width: 6%;
-    margin-left: 1%;
-    margin-top: 5px;
+    /* margin-left: 1%; */
+    margin-top: 1%;
 
 }
 
@@ -195,9 +175,9 @@ div{
 #divi{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 441px;
-    margin-right: -1px;
+    margin-top: 1%;
+    margin-left: 34%;
+    /* margin-right: -1px; */
     height: 55%;
     width: 9%;
 
@@ -207,9 +187,9 @@ div{
 #zero{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 9px;
-    margin-right: -1px;
+    margin-top: 1%;
+    /* margin-left: 9px;
+    margin-right: -1px; */
     height: 55%;
     width: 9%;
 
@@ -219,9 +199,9 @@ div{
 #point{
 
     background-color: #383d3a;
-    margin-top: 6px;
-    margin-left: 9px;
-    margin-right: -1px;
+    margin-top: 1%;
+    /* margin-left: 9px;
+    margin-right: -1px; */
     height: 55%;
     width: 9%;
 
@@ -232,8 +212,8 @@ div{
     background-color: #383d3a;
     height: 53%;
     width: 6%;
-    margin-left: 1%;
-    margin-top: 5px;
+    /* margin-left: 1%; */
+    margin-top: 1%;
 
 }
 
